<resources>
    <string name="app_name">GrantAP</string>
    <string name="request_permission">request</string>
    <string name="request_permission_all">request all</string>
    <string name="permission_internet" format="false">android.permission.INTERNET</string>
    <string name="normal_permission_status" format="false">normal permission status: %s</string>

    <string name="permission_camera" format="false">android.permission.CAMERA</string>
    <string name="dangerous_permission_status" format="false">dangerous permission status: %s</string>

    <string name="permission_access_coarse_location" format="false">android.permission.ACCESS_COARSE_LOCATION</string>

    <string name="permission_system_alert_window" format="false">android.permission.SYSTEM_ALERT_WINDOW</string>
    <string name="system_permission_status" format="false">other system permission status: %s</string>

    <string name="show_dangerous_permission">show_dangerous_permission</string>
    <string name="show_settings_permission">show_settings_permission</string>
    <string name="show_system_alert_window_permission">show_system_alert_window_permission</string>
    <string name="action_settings">Settings</string>
</resources>
